--- a/current/current.html
+++ b/current/current.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="currents">
-        <table>
+        <table class="data">
             <tr>
                 <th>IFARANGA</th>
                 <th>AGACIRO</th>
